--- a/website/levedoper/src/index.css
+++ b/website/levedoper/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
@@ -13,4 +14,8 @@ code {
 }
 :root {
   --main-bg-color: rgb(14, 17, 22);
+}
+
+h1 {
+  font-family: 'Righteous', cursive;
 }
