--- a/website/levedoper/src/FirstSection/FirstSection.css
+++ b/website/levedoper/src/FirstSection/FirstSection.css
@@ -9,5 +9,24 @@
 }
 
 #FirstSection h1 {
-    font-size: 4rem;
+    position: absolute;
+    z-index: 10;
+}
+
+#portfolioSection {
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: transform 0.3s ease-in-out;
+}
+
+#portfolioSection:hover {
+    cursor: pointer;
+    transform: rotateX(-25deg) scale(1.1,1.2);
 }
