--- a/website/levedoper/src/FirstSection/HexagonGallery/HexagonGallery.css
+++ b/website/levedoper/src/FirstSection/HexagonGallery/HexagonGallery.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     perspective: 600px;
-    height: 400px;
+    height: 300px;
     width: 400px;
     overflow: hidden;
     background-color: transparent;
@@ -11,7 +11,13 @@
     font-size: 1.5rem;
     position: absolute;
     right: 5vw;
-    top: 10vh;
+    top: 5vh;
+    transition: transform 0.3s ease-in-out;
+}
+
+#HexagonGallery:hover {
+    cursor: pointer;
+    transform: rotateZ(-25deg) scale(1.2,1.2);
 }
 
 #HexagonGalleryContainer {
@@ -20,7 +26,10 @@
     align-items: center;
     justify-content: center;
     transform-style: preserve-3d;
-    
+    animation-name: spin;
+    animation-duration: 6500ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
     
 }
 
