Added some things

--- a/website/levedoper/src/index.css
+++ b/website/levedoper/src/index.css
@@ -25,3 +25,16 @@ h2 {
   font-family: 'Righteous', cursive;
   font-size: 3rem;
 }
+
+p, button {
+  font-family: 'Spartan', sans-serif;
+}
+
+h1, h2, p, button {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently */
+}
