--- a/website/levedoper/src/FirstSection/FirstSection.css
+++ b/website/levedoper/src/FirstSection/FirstSection.css
@@ -6,18 +6,35 @@
     align-items: center;
     justify-content: center;
     color: white;
+    flex-direction: column;
 }
 
 #FirstSection h1 {
-    position: absolute;
+    position: relative;
     z-index: 10;
 }
 
+#FirstSectionInstructions {
+    position: absolute;
+    top: 5rem;
+    color: rgb(157, 255, 138);
+    text-align: center;
+}
+
+#portfolioSectionShadow {
+    height: 175px;
+    width: 350px;
+    position: absolute;
+    background-image: radial-gradient(closest-side, rgba(255, 255, 255, 0.212), rgba(255, 255, 255, 0));
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+}
 #portfolioSection {
     width: 500px;
-    height: 300px;
+    height: 200px;
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
     left: 0;
     display: flex;
     justify-content: center;
@@ -28,5 +45,5 @@
 
 #portfolioSection:hover {
     cursor: pointer;
-    transform: rotateX(-25deg) scale(1.1,1.2);
+    transform: rotateX(-25deg) scale(1.3,1.4);
 }
