--- a/website/levedoper/src/FirstSection/HexagonGallery/HexagonGallery.css
+++ b/website/levedoper/src/FirstSection/HexagonGallery/HexagonGallery.css
@@ -1,5 +1,6 @@
 #HexagonGallery {
     display: flex;
+    z-index: 1;
     align-items: center;
     justify-content: center;
     perspective: 600px;
@@ -11,8 +12,12 @@
     font-size: 1.5rem;
     position: absolute;
     right: 5vw;
-    top: 5vh;
+    top: 100px;
     transition: transform 0.3s ease-in-out;
+    background-image: radial-gradient(closest-side, rgba(255, 255, 255, 0.212), rgba(255, 255, 255, 0));
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
 }
 
 #HexagonGallery:hover {
@@ -27,7 +32,7 @@
     justify-content: center;
     transform-style: preserve-3d;
     animation-name: spin;
-    animation-duration: 6500ms;
+    animation-duration: 10000ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     
