--- a/website/Levedoper simplified/src/FirstSection/FirstSection.css
+++ b/website/Levedoper simplified/src/FirstSection/FirstSection.css
@@ -1,49 +1,37 @@
 #FirstSection {
+    position: relative;
     width: 100vw;
     height: 100vh;
-    background-color: var(--main-bg-color);
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     flex-direction: column;
+    background-size: cover;
 }
 
-#FirstSection h1 {
-    position: relative;
-    z-index: 10;
-}
-
-#FirstSectionInstructions {
-    position: absolute;
-    top: 5rem;
-    color: rgb(157, 255, 138);
-    text-align: center;
-}
-
-#portfolioSectionShadow {
-    height: 175px;
-    width: 350px;
-    position: absolute;
-    background-image: radial-gradient(closest-side, rgba(255, 255, 255, 0.212), rgba(255, 255, 255, 0));
-    background-position: center;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-}
-#portfolioSection {
-    width: 500px;
-    height: 200px;
-    position: absolute;
-    bottom: 50px;
-    left: 0;
+#FirstSectionVideoContainer {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    transition: transform 0.3s ease-in-out;
 }
 
-#portfolioSection:hover {
-    cursor: pointer;
-    transform: rotateX(-25deg) scale(1.3,1.4);
+#backgroundVideo {
+    position: absolute;
+    z-index: 0;
+    width: 70vw;
+}
+
+#FirstSectionOverlay {
+    position: fixed;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50vw;
+    text-align: center;
 }
