--- a/website/Levedoper simplified/src/SecondSection/SecondSection.css
+++ b/website/Levedoper simplified/src/SecondSection/SecondSection.css
@@ -1,6 +1,6 @@
 #SecondSectionContainer {
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     z-index: 10;
     position: relative;
     color: white;
@@ -9,16 +9,16 @@
 }
 
 #SecondSectionCurves {
-    height: 5rem;
+    height: 6rem;
     width: 100%;
     display: flex;
     align-items: flex-end;
 }
 
 #SecondSectionCurves img {
-    width: 100%;
+    width: 100vw;
     transform-origin: bottom;
-    transform: scaleY(50%);
+    transform: scaleY(50%) translateY(0.5rem);
     position: absolute;
 }
 
@@ -26,5 +26,59 @@
 #SecondSection {
     background-color: var(--website-blue);
     height: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+#SecondSectionContent {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100vw;
+    width: 70rem;
+    flex-direction: row;
+    top: 3rem;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+#SecondSectionContent div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    max-width: 30rem;
+}
+
+#SecondSectionContent h4 {
+    font-size: 1.6rem;
+    margin-top: 2rem;
+    text-align: center;
+    width: 100vw;
+    max-width: 60rem;
+}
+
+#SecondSectionContent strong {
+    text-shadow: 2px 2px rgb(255, 120, 255);
+}
+
+#SecondSection h2 {
+    position: sticky;
+    top: 5rem;
+    font-size: 3rem;
+    text-shadow: 2px 2px rgb(255, 120, 255);
+    z-index: 25;
+    background-color: var(--website-blue);
     width: 100%;
+    text-align: center;
+}
+
+#SecondSection img {
+    margin-top: 2rem;
+    width: 100vw;
+    max-width: 30rem;
 }
