--- a/website/Levedoper simplified/src/App/App.css
+++ b/website/Levedoper simplified/src/App/App.css
@@ -1,3 +1,9 @@
 strong {
     font-weight: bold;
 }
+
+@media only screen and (max-width: 480px) {
+    html, body {
+        font-size: 14px;
+    }
+}
