--- a/website/Levedoper simplified/src/App/App.css
+++ b/website/Levedoper simplified/src/App/App.css
@@ -1,9 +1,7 @@
-strong {
-    font-weight: bold;
+#App {
+    background-color: black;
 }
 
-@media only screen and (max-width: 480px) {
-    html, body {
-        font-size: 14px;
-    }
+strong {
+    font-weight: bold;
 }
