--- a/website/Levedoper simplified/src/FirstSection/FirstSection.css
+++ b/website/Levedoper simplified/src/FirstSection/FirstSection.css
@@ -1,7 +1,7 @@
 #FirstSection {
 
     position: relative; 
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -12,9 +12,8 @@
 }
 
 #FirstSectionVideoContainer {
-    position: fixed;
+    position: absolute;
     height: 100vh;
-    width: 100vw;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -28,11 +27,19 @@
 }
 
 #FirstSectionOverlay {
-    position: fixed;
-    z-index: 10;
+    top: 5rem;
+    position: sticky;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
     text-align: center;
+}
+@media only screen and (max-width: 480px) {
+    #FirstSectionOverlay {
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-evenly;
+    }
 }
