--- a/website/Levedoper simplified/src/SecondSection/SecondSection.css
+++ b/website/Levedoper simplified/src/SecondSection/SecondSection.css
@@ -289,6 +289,7 @@
         transform: scaleY(100%) translateY(0.5rem);
     }
     #SecondSectionContainer {
-        margin-top: -20%;
+        margin-top: -30vh;
+        top: 0;
     }
 }
