--- a/website/Levedoper simplified/src/index.css
+++ b/website/Levedoper simplified/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-  overflow-x: hidden;
+html, body {
+  font-size: 16px;
 }
 
 code {
@@ -26,6 +26,7 @@ h1 {
 
 h2 {
   font-family: 'Righteous', cursive;
+  font-size: 2rem;
 }
 
 h3 {
@@ -43,4 +44,16 @@ h1, h2, h3, h4, h5, h6, p, button, img, br {
      -moz-user-select: none; /* Old versions of Firefox */
       -ms-user-select: none; /* Internet Explorer/Edge */
           user-select: none; /* Non-prefixed version, currently */
+}
+
+@media only screen and (min-height: 1080px) {
+  body, html {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  html, body {
+      font-size: 14px;
+  }
 }
