Finished third section, created fourth, remade nav

--- a/website/Levedoper simplified/src/FirstSection/FirstSection.css
+++ b/website/Levedoper simplified/src/FirstSection/FirstSection.css
@@ -27,8 +27,7 @@
 }
 
 #FirstSectionOverlay {
-    top: 5rem;
-    position: sticky;
+    position: absolute;
     z-index: 1;
     display: flex;
     align-items: center;
