--- a/website/Levedoper simplified/src/ThirdSection/ThirdSection.css
+++ b/website/Levedoper simplified/src/ThirdSection/ThirdSection.css
@@ -1,6 +1,7 @@
 #ThirdSection {
      width: 100%;
-     height: 360vh;
+     height: 240vh;
+     min-height: 600px;
      color: black;
      display: flex;
      justify-content: center;
@@ -10,19 +11,19 @@
 #ThirdSectionStickyContainer {
      position: sticky;
      top: 5rem;
-     height: 100vh;
+     height: 90vh;
      width: 50%;
      background-color: rgb(255, 255, 255);
      overflow-x: hidden;
 }
 
-.MessageBubble h2 {
-     padding: 3rem;
+#ThirdSectionStickyContainer h3 {
+     font-size: 1.4rem;
 }
 
-.MessageBubble a {
-     color: rgb(0, 95, 95);
-     text-decoration: underline;
+.MessageBubble {
+     padding-left: 2rem;
+     padding-right: 2rem;
 }
 
 .MessageBubble a:hover {
@@ -43,9 +44,24 @@
      border-bottom-left-radius: 4rem;
 }
 
+.SendAMessageContainer {
+     position: absolute;
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: space-evenly;
+}
+
+.MessageBubble {
+     height: 11vh;
+     display: flex;
+     align-items: center;
+     justify-content: center       ;
+}
+
 @media only screen and (max-width: 1600px) {
      #ThirdSectionStickyContainer {
-          width: 70%;
+          width: 60%;
      }
 }
 
@@ -64,9 +80,5 @@
 @media only screen and (max-width: 480px) {
      #ThirdSectionStickyContainer {
           width: 100%;
-     }
-
-     .MessageBubble h2 {
-          padding: 2rem;
      }
 }
