--- a/website/Levedoper simplified/src/FourthSection/FourthSection.css
+++ b/website/Levedoper simplified/src/FourthSection/FourthSection.css
@@ -1,3 +1,58 @@
+.fourthSectionContainer {
+     background-color: white;
+}
+
 .fourthSection {
-     height: 100vh;
+     background-color: var(--website-bg);
+     height: 110vh;
+     min-height: 50rem;
+     transition: opacity 0.4s linear;
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     color: white;
+     flex-direction: column;
+     position: relative;
+     overflow-x: hidden;
+}
+
+.fourthSection h2 {
+     margin-top: 0rem;
+}
+
+.fourthSectionProfilesGallery {
+     display: flex;
+     width: 200vw;
+     justify-content: right;
+     transition: transform 0.6s ease-in-out;
+}
+
+.selectedProfileCircles {
+     position: absolute;
+     bottom: 2rem;
+     width: 20rem;
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+}
+
+.selectedProfileCircles button {
+     width: 3rem;
+     height: 3rem;
+     background-color: transparent;
+     border: 2px solid white;
+     border-radius: 50%;
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+}
+
+.selectedProfileCircles button:hover {
+     cursor: pointer;
+     background-color: rgba(255, 255, 255, 0.3);
+}
+
+@media only screen and (max-width: 700px) {
+
 }
