--- a/website/Levedoper simplified/src/FourthSection/profiles/profiles.css
+++ b/website/Levedoper simplified/src/FourthSection/profiles/profiles.css
@@ -7,67 +7,72 @@
 }
 
 .fourthSectionInfoWrapper h3 {
-     margin-top: 1rem;
-     font-size: 2.5rem;
-     font-family: 'Righteous', cursive;
+     font-size: 2rem;
+     margin-bottom: 2rem;
 }
 
 .fourthSectionInfo {
      display: flex;
-     justify-content: space-evenly;
      align-items: center;
-     width: 70%;
+     justify-content: center;
+     width: 80%;
 }
 
 .fourthSectionImageContainer {
      width: 50%;
      display: flex;
-     align-items: center;
      justify-content: center;
+     align-items: center;
 }
 
-.fourthSectionInfo img {
+.fourthSectionImageContainer img {
+     width: 50%;
      border-radius: 50%;
      border: 0.5rem solid var(--website-blue);
-     width: 70%;
 }
 
-.fourthSectionInfo article{
-     width: fit-content;
-     width: 60%;
-     display: flex;
-     font-size: 1rem;
-     margin-top: 1rem;
+.fourthSectionInfo article {
+     width: 50%;
 }
 
-.fourthSectionInfo article strong {
-     font-weight: 800;
-     font-size: 1.2rem;
-     color: white;
-     text-shadow: 2px 2px var(--website-blue) ;
+.fourthSectionInfo article p {
+     width: 80%;
 }
 
 @media only screen and (max-width: 1200px) {
-     .fourthSectionInfo {
+     .fourthSectionInfo article {
+          width: 50%;
+     }
+     .fourthSectionInfo article p {
           width: 100%;
-          font-size: 0.8rem;
+     }
+     .fourthSectionImageContainer img {
+          width: 70%;
+          border-radius: 50%;
+          border: 0.2rem solid var(--website-blue);
      }
 }
 
-@media only screen and (max-width: 700px) {
-     .fourthSectionImageContainer {
-          width: 80%;
-          margin-top: 1rem;
+@media only screen and (max-width: 570px) {
+     .fourthSectionImageContainer img { 
+          width: 100%;
      }
      .fourthSectionInfo {
-          width: 100%;
           flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          padding-bottom: 5rem;
      }
      .fourthSectionInfo article {
           margin-top: 1rem;
-          width: 90%;
-          justify-content: center;
+          width: 100%;
           text-align: center;
-          padding-bottom: 3rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+     }
+     .fourthSectionInfo article p {
+          width: 100%;
      }
 }
