--- a/website/Levedoper simplified/src/SectionCircleSelector/CircleSelector/CircleSelector.css
+++ b/website/Levedoper simplified/src/SectionCircleSelector/CircleSelector/CircleSelector.css
@@ -3,13 +3,29 @@
      height: 1rem;
      background-color: rgb(136, 136, 136);
      border: none;
-     border-radius: 50%;
+     border-radius: 1rem;
      -webkit-appearance: none;
      appearance: none;
      -moz-appearance: none;
+     transition: all 0.2s linear;
 }
 
 .CircleSelector:hover {
      background-color: rgb(98, 98, 98);
+     cursor: pointer;
+}
+
+.CircleSelector button {
+     height: 100%;
+     width: 100%;
+     overflow: hidden;
+     -webkit-appearance: none;
+     appearance: none;
+     -moz-appearance: none;
+     background-color: transparent;
+     border: none;
+}
+
+.CircleSelector button:hover {
      cursor: pointer;
 }
