--- a/website/Levedoper simplified/src/FirstSection/FirstSection.css
+++ b/website/Levedoper simplified/src/FirstSection/FirstSection.css
@@ -1,5 +1,4 @@
 #FirstSection {
-
     position: relative; 
     width: 100%;
     height: 100vh;
@@ -11,34 +10,28 @@
     background-size: cover;
 }
 
-#FirstSectionVideoContainer {
+#FirstSectionContainer {
     position: absolute;
     height: 100vh;
-    background-color: black;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#backgroundVideo {
-    position: absolute;
-    z-index: 0;
-    width: 70vw;
+#FirstSectionContainer img {
+    width: 25vw;
 }
 
-#FirstSectionOverlay {
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
+#FirstSectionContainer h3 {
+    margin-top: 2rem;
+    font-size: 2rem;
     text-align: center;
 }
+
 @media only screen and (max-width: 700px) {
-    #FirstSectionOverlay {
-        flex-direction: column;
-        height: 100%;
-        justify-content: space-evenly;
+    #FirstSectionContainer img {
+        width: 50vw;
     }
 }
