--- a/website/Levedoper simplified/src/NavSection/NavSection.css
+++ b/website/Levedoper simplified/src/NavSection/NavSection.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 5rem;
-
+    background-color: var(--website-bg);
     display: flex;
     justify-content: space-between;
     align-items: center;
