--- a/website/Levedoper simplified/src/ThirdSection/SendMessage/SendMessage.css
+++ b/website/Levedoper simplified/src/ThirdSection/SendMessage/SendMessage.css
@@ -1,25 +1,35 @@
 .SendMessage {
      width: 100%;
+     height: 100%;
+     position: sticky;
+     bottom: 2rem;
      display: flex;
      justify-content: space-evenly;
      align-items: center;
+     background-color: rgb(126, 126, 126);
 }
 
 .SendMessageInput {
      width: 60%;
-     background-color: rgb(241, 241, 241);
-     font-size: 1.5rem;
-     border: solid 1px gray;
+     background-color: rgb(255, 255, 255);
+     font-size: 1rem;
+     border: none;
      color: rgb(0, 0, 0);
      text-align: center;
-     height: 10vh;
+     height: 70%;
      border-radius: 100vw;
+     appearance: none;
      -webkit-appearance: none;
 }
 
+.SendMessageInput::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+     color: rgb(111, 111, 111);
+     opacity: 1; /* Firefox */
+   }
+
 .SendMessageSubmit {
      width: 20%;
-     font-size: 1.5rem;
+     font-size: 1rem;
      background-color: rgb(96, 172, 9);
      border-radius: 100vw;
      color: rgb(255, 255, 255);
@@ -28,7 +38,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
-     height: 10vh;
+     height: 80%;
      -webkit-appearance: none;
 }
 
