--- a/website/Levedoper simplified/src/ThirdSection/ThirdSection.css
+++ b/website/Levedoper simplified/src/ThirdSection/ThirdSection.css
@@ -1,29 +1,40 @@
 #ThirdSection {
+     margin-top: 5rem;
      width: 100%;
      height: 240vh;
      min-height: 600px;
      color: black;
      display: flex;
      justify-content: center;
-     background-color: white;
+     background-color: var(--website-bg);
 }
 
 #ThirdSectionStickyContainer {
      position: sticky;
      top: 5rem;
      height: 90vh;
-     width: 50%;
-     background-color: rgb(255, 255, 255);
+     width: 41.3900796vh;
      overflow-x: hidden;
+     display: flex;
+     justify-content: center;
+}
+
+.phoneMockup {
+     position: absolute;
+     height: 100%;
 }
 
 #ThirdSectionStickyContainer h3 {
-     font-size: 1.4rem;
+     font-size: 1rem;
 }
 
 .MessageBubble {
-     padding-left: 2rem;
-     padding-right: 2rem;
+     padding-left: 1rem;
+     padding-right: 1rem;
+     height: 4vh;
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
 
 .MessageBubble a:hover {
@@ -46,39 +57,10 @@
 
 .SendAMessageContainer {
      position: absolute;
-     width: 100%;
+     width: 90%;
      display: flex;
      align-items: center;
      justify-content: space-evenly;
-}
-
-.MessageBubble {
-     height: 11vh;
-     display: flex;
-     align-items: center;
-     justify-content: center       ;
-}
-
-@media only screen and (max-width: 1600px) {
-     #ThirdSectionStickyContainer {
-          width: 60%;
-     }
-}
-
-@media only screen and (max-width: 1200px) {
-     #ThirdSectionStickyContainer {
-          width: 80%;
-     }
-}
-
-@media only screen and (max-width: 800px) {
-     #ThirdSectionStickyContainer {
-          width: 90%;
-     }
-}
-
-@media only screen and (max-width: 480px) {
-     #ThirdSectionStickyContainer {
-          width: 100%;
-     }
+     bottom: 10.5vh;
+     height: 5vh;
 }
