Added sixth section, missing navbar

--- a/website/Levedoper simplified/src/FourthSection/profiles/profiles.css
+++ b/website/Levedoper simplified/src/FourthSection/profiles/profiles.css
@@ -6,6 +6,10 @@
      width: 100%;
 }
 
+.fourthSectionInfoWrapper strong {
+     color: var(--website-orange);
+}
+
 .fourthSectionInfoWrapper h3 {
      font-size: 2rem;
      margin-bottom: 2rem;
