--- a/website/Levedoper simplified/src/FifthSection/FifthSection.css
+++ b/website/Levedoper simplified/src/FifthSection/FifthSection.css
@@ -1,3 +1,79 @@
 #FifthSection {
-     height: 100vh;
+     padding-top: 5rem;
+     padding-bottom: 5rem;
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     overflow-x: hidden;
+}
+
+.FifthSectionFirst {
+     width: 70%;
+     min-width: 40rem;
+     display: grid;
+     grid-auto-flow: row;
+     grid-template-columns: repeat(3, 1fr);
+     margin-top: 2rem;
+     gap: 2rem;
+     justify-items: center;
+     align-items: center;
+}
+
+.FifthSectionColumn {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     flex-wrap: nowrap;
+}
+
+.FifthSectionColumn h3 {
+     margin-bottom: 2rem;
+     font-size: 1.4rem;
+     font-weight: bold;
+     text-align: center;
+     color: var(--website-blue);
+}
+
+.FifthSectionColumn p {
+     font-size: 1rem;
+     line-height: 1rem;
+     text-align: justify;
+     color: var(--website-text);
+}
+
+.FifthSectionColumn strong {
+     font-weight: bolder;
+     color: var(--website-orange);
+}
+
+@media only screen and (max-width: 700px) {
+     .FifthSectionFirst {
+          min-width: auto;
+          width: 90%;
+          grid-template-columns: 1fr 1fr;
+          gap: 1rem;
+     }
+}
+
+@media only screen and (max-width: 480px) {
+     #FifthSection {
+          margin-top: 0px;
+     }
+
+     .FifthSectionFirst {
+          min-width: auto;
+          width: 80%;
+          grid-template-columns: 1fr;
+          gap: 0rem;
+          grid-auto-rows: 22.5vh;
+          margin-top: 0px;
+     }
+
+     .FifthSectionColumn p {
+          font-size: 1.2rem;
+          line-height: 1.2rem;
+          text-align: justify;
+          color: rgb(241, 241, 241);
+     }
 }
