--- a/website/Levedoper simplified/src/FirstSection/FirstSection.css
+++ b/website/Levedoper simplified/src/FirstSection/FirstSection.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: var(--website-text);
     flex-direction: column;
     background-size: cover;
 }
