--- a/website/Levedoper simplified/src/FourthSection/FourthSection.css
+++ b/website/Levedoper simplified/src/FourthSection/FourthSection.css
@@ -4,7 +4,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
-     color: white;
+     color: var(--website-text);
      flex-direction: column;
      position: relative;
      overflow-x: hidden;
@@ -13,6 +13,7 @@
 
 .fourthSectionTitle {
      margin-bottom: 2rem;
+     color: var(--website-blue);
 }
 
 .fourthSectionProfilesGallery {
