--- a/website/Levedoper simplified/src/NavSection/NavSection.css
+++ b/website/Levedoper simplified/src/NavSection/NavSection.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
+    color: var(--website-text);
     z-index: 50;
     transition: all 0.8s linear;
 }
@@ -25,7 +25,7 @@
 }
 
 #NavSectionLeft:hover {
-    background-color: #009189;
+    background-color: var(--website-blue);
     cursor: pointer;
 }
 
