--- a/website/Levedoper simplified/src/SecondSection/SecondSection.css
+++ b/website/Levedoper simplified/src/SecondSection/SecondSection.css
@@ -2,7 +2,7 @@
     width: 100%;
     z-index: 10;
     position: relative;
-    color: white;
+    color: var(--website-text);
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
@@ -19,7 +19,7 @@
 #SecondSection h2 {
     position: sticky;
     font-size: 3rem;
-    text-shadow: 2px 2px rgb(255, 120, 255);
+    color: var(--website-blue);
     z-index: 25;
     width: 100%;
     text-align: center;
@@ -35,8 +35,8 @@
     flex-wrap: wrap;
 }
 
-#SecondSectionMethodology strong {
-    text-shadow: 2px 2px rgb(255, 120, 255);
+#SecondSectionMethodology h4 strong {
+    color: var(--website-orange);
 }
 
 .MethodologyText {
@@ -49,6 +49,11 @@
 .secondSectionNumber {
     width: 20%;
 }
+
+.alisele {
+    align-self: flex-end;
+}
+
 
 .textLeft {
     text-align: left;
@@ -77,7 +82,6 @@
     border-radius: 50%;
     height: 5rem;
     width: 5rem;
-    box-shadow: 2px 2px rgb(255, 120, 255);
     animation: numberAnimation 2s infinite linear;
 }
 
