--- a/website/Levedoper simplified/src/NavSection/NavSection.css
+++ b/website/Levedoper simplified/src/NavSection/NavSection.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     transition: background-color 0.25s ease-in-out;
+    background-color: var(--website-bg);
 }
 
 #NavSectionLeft img {
@@ -34,4 +35,7 @@
     width: auto;
     display: flex;
     align-items: center;
+    justify-content: right;
+    width: 100%;
+    background-color: var(--website-bg);
 }
